fix title overlaping with a photo of my face

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -13,21 +13,24 @@
 }
 
 .title {
-  font-size: 60px;
+  position: relative;
+  top: 0;
+  left: 0;
+  font-size: 50px;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
-  padding: 40px 15px;
+  padding: 40px 90px 40px 15px;
 }
 
 .imageWrapper {
   position: absolute;
-  width: 115px;
-  height: 100%;
-  top: 0;
+  width: 113px;
+  height: 170.5px;
+  bottom: 0;
   right: 0;
-  border-radius: '10px';
-  overflow: 'hidden'
+  overflow: hidden;
+  border-radius: 0px 10px 10px 0px;
 }
 
 .cvfaceBackground {
